<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:textColor="@color/color1"
        android:textStyle="bold"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/desc"
        android:textColor="@color/white"
        android:background="@drawable/card_rounded"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showMapsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:layout_marginTop="20dp"
        android:text="@string/show_maps"
        android:textColor="@color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showMaps"
        android:text="@string/show_on_map"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/showMapsTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showMaps"
        android:layout_marginTop="20dp"
        android:text="@string/show_countries"
        android:textColor="@color/black"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:name="com.example.pertemuan7.ShowMoreFragment"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout="@layout/fragment_countries"
        app:layout_constraintTop_toBottomOf="@+id/showCountry"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cek_vis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/style"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/light_sensor"
            android:text="Light"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/day"
            app:layout_constraintEnd_toStartOf="@id/switchCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/image_style"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchCompat"
            android:text="@string/style"
            android:textSize="10dp"
            android:padding="10dp"
            app:switchPadding="10dp"
            android:checked="false"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>