<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="15dp"
    tools:context=".IndonesiaClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/indo_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card_rounded_white"
            android:src="@mipmap/indonesian_foreground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_indo"
            android:text="@string/indo"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital_city"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jakarta"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_on_map"
            android:textColor="@color/purple_500"
            android:textSize="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/purple_500"
            android:textSize="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showCountry"
            android:text="@string/country"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupiah"
            android:textColor="@color/black"
            android:textSize="18dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/rupiah"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/convert"
            android:id="@+id/convert"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/us_foreground"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/indo_dollar"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/uk_foreground"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/indo_pound"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/sokor_foreground"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/indo_won"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/thai_foreground"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/indo_bath"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/jpn_foreground"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dot"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/indo_yen"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:textSize="18dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>


</LinearLayout>